starting working on void dominantEmotion

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ GridEnabled=False
 SnapScaleEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -133,6 +133,7 @@ LastLevel=/Game/Maps/Village1
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Controllers/AI/AIpawn-character.AIpawn-character
 
 [PluginBrowser]
 InstalledPlugins=SaveExtension
@@ -2456,6 +2457,9 @@ MyAIpawn_character_C.Rendering=True
 MyAIpawn_character_C.Replication=True
 MyAIpawn_character_C.Input=True
 MyAIpawn_character_C.Actor=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2564,10 +2568,10 @@ RecentlyPlaced=/Game/Models/Lowpoly/LowPolyTree.LowPolyTree;
 DisplayedStatsPageName=PrimitiveStats
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Controllers/AI/CPP/MyAIpawn_character
-MRUItem1=/Game/CPP/MyAIpawn_character
-MRUItem2=/Game/BP/area-classes/BP_negativeLocations
-MRUItem3=/Game/Controllers/AI/AIpawn-character
+MRUItem0=/Game/Controllers/AI/AIpawn-character
+MRUItem1=/Game/Controllers/AI/CPP/MyAIpawn_character
+MRUItem2=/Game/CPP/MyAIpawn_character
+MRUItem3=/Game/BP/area-classes/BP_negativeLocations
 MRUItem4=/Game/BP/food_classes/BP_foodClass
 MRUItem5=/Game/Controllers/AI/AImainController
 MRUItem6=/Game/Models/Lowpoly/LowPolyBush
@@ -2698,8 +2702,8 @@ ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray
 AImainController_C=
 AIController=
 Controller=
-AIpawn-character_C="\"Object.\" \"Object.\" "
-Character="\"Object.\" \"Object.\" "
+AIpawn-character_C=
+Character=
 Pawn=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
