fixed the bug with being unable to access the decrementNeeds() func -- it was set to be protected instead of public :-D

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -830,7 +830,7 @@ BlueprintGraph.TimeStamp=2019.04.29-12.59.38
 BlueprintGraph.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2019.04.29-12.59.40
 ExternalImagePicker.LastCompileMethod=Unknown
-NeuroSim.TimeStamp=2019.05.02-17.32.59
+NeuroSim.TimeStamp=2019.05.02-20.35.37
 NeuroSim.LastCompileMethod=Runtime
 BlueprintCompilerCppBackend.TimeStamp=2019.04.29-12.59.38
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
@@ -2542,6 +2542,55 @@ SceneComponent.Tags=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 AIpawn_character_C.Components=True
+AIpawn_character_C.Tick=True
+REINST_AIpawn_character_C_43.TransformCommon=True
+REINST_AIpawn_character_C_43.Components=True
+REINST_AIpawn_character_C_43.Pawn=True
+REINST_AIpawn_character_C_43.Camera=True
+REINST_AIpawn_character_C_43.Rendering=True
+REINST_AIpawn_character_C_43.Replication=True
+REINST_AIpawn_character_C_43.Input=True
+REINST_AIpawn_character_C_43.Actor=True
+REINST_AIpawn_character_C_43.Tick=True
+REINST_AIpawn_character_C_47.TransformCommon=True
+REINST_AIpawn_character_C_47.Components=True
+REINST_AIpawn_character_C_47.Pawn=True
+REINST_AIpawn_character_C_47.Camera=True
+REINST_AIpawn_character_C_47.Rendering=True
+REINST_AIpawn_character_C_47.Replication=True
+REINST_AIpawn_character_C_47.Input=True
+REINST_AIpawn_character_C_47.Actor=True
+AIpawn_character_Child_C.Tick=True
+AIpawn_character_Child_C.Pawn=True
+AIpawn_character_Child_C.Camera=True
+AIpawn_character_Child_C.Rendering=True
+AIpawn_character_Child_C.Replication=True
+AIpawn_character_Child_C.Input=True
+AIpawn_character_Child_C.Actor=True
+REINST_AIpawn_character_C_58.TransformCommon=True
+REINST_AIpawn_character_C_58.Components=True
+REINST_AIpawn_character_C_58.Pawn=True
+REINST_AIpawn_character_C_58.Camera=True
+REINST_AIpawn_character_C_58.Rendering=True
+REINST_AIpawn_character_C_58.Replication=True
+REINST_AIpawn_character_C_58.Input=True
+REINST_AIpawn_character_C_58.Actor=True
+REINST_AIpawn_character_C_62.TransformCommon=True
+REINST_AIpawn_character_C_62.Components=True
+REINST_AIpawn_character_C_62.Pawn=True
+REINST_AIpawn_character_C_62.Camera=True
+REINST_AIpawn_character_C_62.Rendering=True
+REINST_AIpawn_character_C_62.Replication=True
+REINST_AIpawn_character_C_62.Input=True
+REINST_AIpawn_character_C_62.Actor=True
+REINST_AIpawn_character_C_66.TransformCommon=True
+REINST_AIpawn_character_C_66.Components=True
+REINST_AIpawn_character_C_66.Pawn=True
+REINST_AIpawn_character_C_66.Camera=True
+REINST_AIpawn_character_C_66.Rendering=True
+REINST_AIpawn_character_C_66.Replication=True
+REINST_AIpawn_character_C_66.Input=True
+REINST_AIpawn_character_C_66.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2650,26 +2699,26 @@ RecentlyPlaced=/Game/Models/Lowpoly/LowPolySmallTree.LowPolySmallTree;
 DisplayedStatsPageName=PrimitiveStats
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Controllers/AI/AIpawn-character
-MRUItem1=/Game/Controllers/AI/CPP/MyAIpawn_character
-MRUItem2=/Game/CPP/MyAIpawn_character
-MRUItem3=/Game/BP/area-classes/BP_negativeLocations
-MRUItem4=/Game/BP/food_classes/BP_foodClass
-MRUItem5=/Game/Controllers/AI/AImainController
-MRUItem6=/Game/Models/Lowpoly/LowPolyBush
-MRUItem7=/Game/BP/area-classes/negative/BP_collider-forestGeneric
-MRUItem8=/Game/BP/area-classes/BP_collider-forest1
-MRUItem9=/Game/BP/area-classes/positive/BP_colliderFood
-MRUItem10=/Game/BP/area-classes/BP_collider-food
-MRUItem11=/Game/BP/food_classes/foodClasses
-MRUItem12=/Game/BP/BP_foodClass
-MRUItem13=/Game/BP/area-classes/BP_collider-foodRock
-MRUItem14=/Game/BP/BP_collider-forest1
-MRUItem15=/Game/BP/enum_emotions
-MRUItem16=/Game/AIBehaviorToolkit/Blueprints/BP_BehaviorComponent
-MRUItem17=/Game/BP/BP_collider-forest2
-MRUItem18=/Game/Controllers/AI/AIpawn-setRandomLoc
-MRUItem19=/Game/Controllers/AI/AIpawn
+MRUItem0=/Game/Controllers/AI/CPP/AIpawn_character
+MRUItem1=/Game/Controllers/AI/CPP/AIpawn_character_Child
+MRUItem2=/Game/Controllers/AI/AIpawn-character
+MRUItem3=/Game/Controllers/AI/CPP/MyAIpawn_character
+MRUItem4=/Game/CPP/MyAIpawn_character
+MRUItem5=/Game/BP/area-classes/BP_negativeLocations
+MRUItem6=/Game/BP/food_classes/BP_foodClass
+MRUItem7=/Game/Controllers/AI/AImainController
+MRUItem8=/Game/Models/Lowpoly/LowPolyBush
+MRUItem9=/Game/BP/area-classes/negative/BP_collider-forestGeneric
+MRUItem10=/Game/BP/area-classes/BP_collider-forest1
+MRUItem11=/Game/BP/area-classes/positive/BP_colliderFood
+MRUItem12=/Game/BP/area-classes/BP_collider-food
+MRUItem13=/Game/BP/food_classes/foodClasses
+MRUItem14=/Game/BP/BP_foodClass
+MRUItem15=/Game/BP/area-classes/BP_collider-foodRock
+MRUItem16=/Game/BP/BP_collider-forest1
+MRUItem17=/Game/BP/enum_emotions
+MRUItem18=/Game/AIBehaviorToolkit/Blueprints/BP_BehaviorComponent
+MRUItem19=/Game/BP/BP_collider-forest2
 
 [AssetEditorToolkitTabLocation]
 /Game/Models/Lowpoly/steel.steel=1
@@ -2700,6 +2749,8 @@ MRUItem19=/Game/Controllers/AI/AIpawn
 /Game/BP/area-classes/BP_negativeLocations.BP_negativeLocations=1
 /Game/CPP/MyAIpawn_character.MyAIpawn_character=1
 /Game/Controllers/AI/CPP/MyAIpawn_character.MyAIpawn_character=1
+/Game/Controllers/AI/CPP/AIpawn_character.AIpawn_character=1
+/Game/Controllers/AI/CPP/AIpawn_character_Child.AIpawn_character_Child=1
 
 [MaterialEditor]
 PrimType=1
@@ -2786,7 +2837,7 @@ AIController=
 Controller=
 AIpawn-character_C=
 Character=
-Pawn="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" "
+Pawn="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -2809,8 +2860,15 @@ UMGEditorProjectSettings="\"Object.Compiler.DefaultCompilerOptions\" \"Object.De
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" "
 IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
-AIpawn_character_C="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" "
-AIpawn_character="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" "
+AIpawn_character_C="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+AIpawn_character="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+REINST_AIpawn_character_C_43="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" "
+REINST_AIpawn_character_C_47="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+AIpawn_character_Child_C="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+REINST_AIpawn_character_C_58="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+HOTRELOADED_AIpawn_character_0="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+REINST_AIpawn_character_C_62="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+REINST_AIpawn_character_C_66="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
