--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -122,7 +122,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Controllers/AI
+ContentBrowserTab1.SelectedPaths=/Game/Controllers/AI/CPP
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -132,7 +132,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Village1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=SaveExtension
@@ -2591,6 +2591,20 @@ REINST_AIpawn_character_C_66.Rendering=True
 REINST_AIpawn_character_C_66.Replication=True
 REINST_AIpawn_character_C_66.Input=True
 REINST_AIpawn_character_C_66.Actor=True
+REINST_AIpawn_character_C_41.Tick=True
+REINST_AIpawn_character_C_41.Pawn=True
+REINST_AIpawn_character_C_41.Camera=True
+REINST_AIpawn_character_C_41.Rendering=True
+REINST_AIpawn_character_C_41.Replication=True
+REINST_AIpawn_character_C_41.Input=True
+REINST_AIpawn_character_C_41.Actor=True
+REINST_AIpawn_character_C_45.Tick=True
+REINST_AIpawn_character_C_45.Pawn=True
+REINST_AIpawn_character_C_45.Camera=True
+REINST_AIpawn_character_C_45.Rendering=True
+REINST_AIpawn_character_C_45.Replication=True
+REINST_AIpawn_character_C_45.Input=True
+REINST_AIpawn_character_C_45.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2700,8 +2714,8 @@ DisplayedStatsPageName=PrimitiveStats
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Controllers/AI/CPP/AIpawn_character
-MRUItem1=/Game/Controllers/AI/CPP/AIpawn_character_Child
-MRUItem2=/Game/Controllers/AI/AIpawn-character
+MRUItem1=/Game/Controllers/AI/AIpawn-character
+MRUItem2=/Game/Controllers/AI/CPP/AIpawn_character_Child
 MRUItem3=/Game/Controllers/AI/CPP/MyAIpawn_character
 MRUItem4=/Game/CPP/MyAIpawn_character
 MRUItem5=/Game/BP/area-classes/BP_negativeLocations
@@ -2869,6 +2883,8 @@ REINST_AIpawn_character_C_58="\"Object.Components.Mesh\" \"Object.Components.Mes
 HOTRELOADED_AIpawn_character_0="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
 REINST_AIpawn_character_C_62="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
 REINST_AIpawn_character_C_66="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+REINST_AIpawn_character_C_41="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
+REINST_AIpawn_character_C_45="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
