bugfixes, removed a few comments and added a few funcs

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Village1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=SaveExtension
