declared and started to define a new func, 'AIsenseDecision'

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Village1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=SaveExtension
@@ -830,12 +830,16 @@ BlueprintGraph.TimeStamp=2019.04.29-12.59.38
 BlueprintGraph.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2019.04.29-12.59.40
 ExternalImagePicker.LastCompileMethod=Unknown
-NeuroSim.TimeStamp=2019.05.05-20.34.11
+NeuroSim.TimeStamp=2019.05.06-05.46.22
 NeuroSim.LastCompileMethod=Runtime
 BlueprintCompilerCppBackend.TimeStamp=2019.04.29-12.59.38
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2019.04.29-12.59.45
 UATHelper.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2019.04.29-12.59.42
+NullDrv.LastCompileMethod=Unknown
+BlueprintNativeCodeGen.TimeStamp=2019.04.29-12.59.38
+BlueprintNativeCodeGen.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -3445,8 +3449,8 @@ RecentlyPlaced=/Game/Models/Lowpoly/Material.Material;
 DisplayedStatsPageName=PrimitiveStats
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP/area-classes/positive/BP_colliderFood
-MRUItem1=/Game/Controllers/AI/CPP/AIpawn_characterDefault
+MRUItem0=/Game/Controllers/AI/CPP/AIpawn_characterDefault
+MRUItem1=/Game/BP/area-classes/positive/BP_colliderFood
 MRUItem2=/Game/BP/area-classes/negative/BP_collider-forestGeneric
 MRUItem3=/Game/BP/area-classes/BP_negativeLocations
 MRUItem4=/Game/BP/food_classes/BP_foodClass
