--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -830,16 +830,12 @@ BlueprintGraph.TimeStamp=2019.04.29-12.59.38
 BlueprintGraph.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2019.04.29-12.59.40
 ExternalImagePicker.LastCompileMethod=Unknown
-NeuroSim.TimeStamp=2019.05.06-05.46.22
+NeuroSim.TimeStamp=2019.05.08-07.30.59
 NeuroSim.LastCompileMethod=Runtime
 BlueprintCompilerCppBackend.TimeStamp=2019.04.29-12.59.38
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2019.04.29-12.59.45
 UATHelper.LastCompileMethod=Unknown
-NullDrv.TimeStamp=2019.04.29-12.59.42
-NullDrv.LastCompileMethod=Unknown
-BlueprintNativeCodeGen.TimeStamp=2019.04.29-12.59.38
-BlueprintNativeCodeGen.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -3341,6 +3337,14 @@ REINST_AIpawn_characterDefault_C_43.Pawn=True
 REINST_AIpawn_characterDefault_C_43.Replication=True
 REINST_AIpawn_characterDefault_C_43.Input=True
 REINST_AIpawn_characterDefault_C_43.Actor=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3421,7 +3425,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=MapCheck
 
 [PlacementMode]
 RecentlyPlaced=/Game/Controllers/AI/CPP/AIpawn_characterDefault.AIpawn_characterDefault;
@@ -3571,7 +3575,7 @@ BP_collider-forestGeneric_C.Shape=True
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" "
-DataAsset="\"Object.Blackboard\" "
+DataAsset="\"Object.Serialization.Serialization|Controllers\" "
 Object=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
