--- a/Saved/Cooked/WindowsNoEditor/NeuroSim/Saved/Config/WindowsNoEditor/Engine.ini
+++ b/Saved/Cooked/WindowsNoEditor/NeuroSim/Saved/Config/WindowsNoEditor/Engine.ini
@@ -8,13 +8,12 @@ Paths=../../../../UE_4.22/Engine/Plugins/Enterprise/DatasmithContent/Content
 Paths=../../../../UE_4.22/Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../../UE_4.22/Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../../UE_4.22/Engine/Plugins/Runtime/Steam/SteamVR/Content
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
+Paths=C:/Program Files/Epic Games/UE_4.22/Engine/Plugins/2D/Paper2D/Content
+Paths=C:/Program Files/Epic Games/UE_4.22/Engine/Plugins/Developer/AnimationSharing/Content
+Paths=C:/Program Files/Epic Games/UE_4.22/Engine/Plugins/Editor/CryptoKeys/Content
+Paths=C:/Program Files/Epic Games/UE_4.22/Engine/Plugins/Enterprise/DatasmithContent/Content
+Paths=C:/Program Files/Epic Games/UE_4.22/Engine/Plugins/Media/MediaCompositing/Content
+Paths=C:/Program Files/Epic Games/UE_4.22/Engine/Plugins/Runtime/Oculus/OculusVR/Content
+Paths=C:/Program Files/Epic Games/UE_4.22/Engine/Plugins/Runtime/Steam/SteamVR/Content
 
 
