first branch commit

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -156,7 +156,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../Neural/NeuroSim/Content/Maps
+UNR=D:/Epic Games/Neural/NeuroSim/Content/Maps
 BRUSH=../../../../Neural/NeuroSim/Content/
 FBX=../../../../Neural/NeuroSim/Content/
 FBXAnim=../../../../Neural/NeuroSim/Content/
@@ -816,26 +816,32 @@ SceneOutliner.TimeStamp=2019.05.09-22.28.59
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2019.05.09-22.28.36
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2019.04.29-12.59.46
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2019.04.29-12.59.42
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2019.05.09-22.29.12
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2019.05.09-22.28.48
+MovieSceneCapture.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2019.04.29-12.59.42
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2019.04.29-12.59.41
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-MeshBuilder.TimeStamp=2019.04.29-12.59.42
-MeshBuilder.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2019.04.29-12.59.38
-BlueprintGraph.LastCompileMethod=Unknown
+MeshBuilder.TimeStamp=2019.05.09-22.28.45
+MeshBuilder.LastCompileMethod=External
+BlueprintGraph.TimeStamp=2019.05.09-22.28.09
+BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.04.29-12.59.40
 ExternalImagePicker.LastCompileMethod=Unknown
-NeuroSim.TimeStamp=2019.05.10-20.49.00
-NeuroSim.LastCompileMethod=External
+NeuroSim.TimeStamp=2019.05.12-00.22.43
+NeuroSim.LastCompileMethod=Runtime
 BlueprintCompilerCppBackend.TimeStamp=2019.04.29-12.59.38
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2019.04.29-12.59.45
 UATHelper.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2019.05.09-22.29.05
+StaticMeshEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2019.05.09-22.29.02
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2019.05.09-22.28.52
+PinnedCommandList.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -3524,6 +3530,48 @@ SkeletalMesh.Sampling=True
 BoneProxy.Transform=True
 BoneProxy.Bone=True
 BoneProxy.Reference Transform=True
+REINST_AIpawn_characterDefault_C_41.TransformCommon=True
+REINST_AIpawn_characterDefault_C_41.Animation=True
+REINST_AIpawn_characterDefault_C_41.Mesh=True
+REINST_AIpawn_characterDefault_C_41.Core AI logic=True
+REINST_AIpawn_characterDefault_C_41.Needs=True
+REINST_AIpawn_characterDefault_C_41.Aux=True
+REINST_AIpawn_characterDefault_C_41.Emotions=True
+REINST_AIpawn_characterDefault_C_41.Physics=True
+REINST_AIpawn_characterDefault_C_41.Collision=True
+REINST_AIpawn_characterDefault_C_41.Lighting=True
+REINST_AIpawn_characterDefault_C_41.Clothing=True
+REINST_AIpawn_characterDefault_C_41.Rendering=True
+REINST_AIpawn_characterDefault_C_41.MasterPoseComponent=True
+REINST_AIpawn_characterDefault_C_41.ClothingSimulation=True
+REINST_AIpawn_characterDefault_C_41.Tags=True
+REINST_AIpawn_characterDefault_C_41.Activation=True
+REINST_AIpawn_characterDefault_C_41.Cooking=True
+REINST_AIpawn_characterDefault_C_41.Character Movement (General Settings)=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: Walking=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: Jumping / Falling=True
+REINST_AIpawn_characterDefault_C_41.Character Movement (Networking)=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: Swimming=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: Flying=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: Custom Movement=True
+REINST_AIpawn_characterDefault_C_41.Character Movement (Rotation Settings)=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: Physics Interaction=True
+REINST_AIpawn_characterDefault_C_41.Character Movement=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: Avoidance=True
+REINST_AIpawn_characterDefault_C_41.RootMotion=True
+REINST_AIpawn_characterDefault_C_41.Character Movement: NavMesh Movement=True
+REINST_AIpawn_characterDefault_C_41.NavMovement=True
+REINST_AIpawn_characterDefault_C_41.Velocity=True
+REINST_AIpawn_characterDefault_C_41.PlanarMovement=True
+REINST_AIpawn_characterDefault_C_41.MovementComponent=True
+REINST_AIpawn_characterDefault_C_41.Shape=True
+REINST_AIpawn_characterDefault_C_41.Navigation=True
+REINST_AIpawn_characterDefault_C_41.Character=True
+REINST_AIpawn_characterDefault_C_41.Camera=True
+REINST_AIpawn_characterDefault_C_41.Pawn=True
+REINST_AIpawn_characterDefault_C_41.Replication=True
+REINST_AIpawn_characterDefault_C_41.Input=True
+REINST_AIpawn_characterDefault_C_41.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3604,7 +3652,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=SourceControl
 
 [PlacementMode]
 RecentlyPlaced=/Script/NeuroSim.AIpawn_characterDefault;
