created a camera and an audio component for the 'AIpawn_characterDefault'; figured out how to pass class and object references to funcs; worked on the 'AIsenseDecision' func

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -830,7 +830,7 @@ BlueprintGraph.TimeStamp=2019.05.09-22.28.09
 BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.04.29-12.59.40
 ExternalImagePicker.LastCompileMethod=Unknown
-NeuroSim.TimeStamp=2019.05.12-00.22.43
+NeuroSim.TimeStamp=2019.05.12-22.12.52
 NeuroSim.LastCompileMethod=Runtime
 BlueprintCompilerCppBackend.TimeStamp=2019.04.29-12.59.38
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
@@ -889,7 +889,7 @@ BoxComponent=BoxComponent.Collision.Collision,
 K2Node_VariableSet=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 AImainController_C=K2Node_VariableSet.DefaultValueCategory.None,
 BP_collider-food_C=BP_collider-food_C.Collision.Collision,
-K2Node_VariableGet=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,AIpawn_characterDefault_C.Physics.ConstraintsGroup,AIpawn_characterDefault_C.Rendering.TextureStreaming,AIpawn_characterDefault_C.Rendering.LOD,
+K2Node_VariableGet=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,AIpawn_characterDefault_C.Physics.ConstraintsGroup,AIpawn_characterDefault_C.Rendering.TextureStreaming,AIpawn_characterDefault_C.Rendering.LOD,AIpawn_characterDefault_C.Components.Collision,
 AIpawn-character_C=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
@@ -958,7 +958,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputS
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 AIpawn_character_C=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 AIpawn_character=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-AIpawn_characterDefault_C=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,AIpawn_characterDefault_C.Physics.ConstraintsGroup,AIpawn_characterDefault_C.Rendering.TextureStreaming,AIpawn_characterDefault_C.Rendering.LOD,
+AIpawn_characterDefault_C=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,AIpawn_characterDefault_C.Physics.ConstraintsGroup,AIpawn_characterDefault_C.Rendering.TextureStreaming,AIpawn_characterDefault_C.Rendering.LOD,AIpawn_characterDefault_C.Components.Collision,
 AIpawn_characterDefault=K2Node_VariableSet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 
 [DetailCategories]
@@ -3572,6 +3572,85 @@ REINST_AIpawn_characterDefault_C_41.Pawn=True
 REINST_AIpawn_characterDefault_C_41.Replication=True
 REINST_AIpawn_characterDefault_C_41.Input=True
 REINST_AIpawn_characterDefault_C_41.Actor=True
+AIpawn_characterDefault_C.SkeletalMesh=True
+AIpawn_characterDefault_C.Optimization=True
+REINST_BP_collider-forestGeneric_C_47.Collision=True
+REINST_BP_collider-forestGeneric_C_47.Actor=True
+REINST_BP_collider-forestGeneric_C_47.Tick=True
+REINST_BP_collider-forestGeneric_C_47.Rendering=True
+REINST_BP_collider-forestGeneric_C_47.Replication=True
+REINST_BP_collider-forestGeneric_C_47.Input=True
+SceneComponent.Variable=True
+SceneComponent.Sockets=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Events=True
+REINST_AIpawn_characterDefault_C_85.Core AI logic=True
+REINST_AIpawn_characterDefault_C_85.Tick=True
+REINST_AIpawn_characterDefault_C_85.Needs=True
+REINST_AIpawn_characterDefault_C_85.Aux=True
+REINST_AIpawn_characterDefault_C_85.Emotions=True
+REINST_AIpawn_characterDefault_C_85.Character=True
+REINST_AIpawn_characterDefault_C_85.Camera=True
+REINST_AIpawn_characterDefault_C_85.Pawn=True
+REINST_AIpawn_characterDefault_C_85.Rendering=True
+REINST_AIpawn_characterDefault_C_85.Replication=True
+REINST_AIpawn_characterDefault_C_85.Input=True
+REINST_AIpawn_characterDefault_C_85.Actor=True
+REINST_AIpawn_characterDefault_C_93.TransformCommon=True
+REINST_AIpawn_characterDefault_C_93.Animation=True
+REINST_AIpawn_characterDefault_C_93.Mesh=True
+REINST_AIpawn_characterDefault_C_93.Core AI logic=True
+REINST_AIpawn_characterDefault_C_93.Needs=True
+REINST_AIpawn_characterDefault_C_93.Aux=True
+REINST_AIpawn_characterDefault_C_93.Components=True
+REINST_AIpawn_characterDefault_C_93.Physics=True
+REINST_AIpawn_characterDefault_C_93.Collision=True
+REINST_AIpawn_characterDefault_C_93.Emotions=True
+REINST_AIpawn_characterDefault_C_93.Lighting=True
+REINST_AIpawn_characterDefault_C_93.Rendering=True
+REINST_AIpawn_characterDefault_C_93.Clothing=True
+REINST_AIpawn_characterDefault_C_93.MasterPoseComponent=True
+REINST_AIpawn_characterDefault_C_93.ClothingSimulation=True
+REINST_AIpawn_characterDefault_C_93.Tags=True
+REINST_AIpawn_characterDefault_C_93.Activation=True
+REINST_AIpawn_characterDefault_C_93.Cooking=True
+REINST_AIpawn_characterDefault_C_93.Character Movement (General Settings)=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: Walking=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: Jumping / Falling=True
+REINST_AIpawn_characterDefault_C_93.Character Movement (Networking)=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: Swimming=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: Flying=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: Custom Movement=True
+REINST_AIpawn_characterDefault_C_93.Character Movement (Rotation Settings)=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: Physics Interaction=True
+REINST_AIpawn_characterDefault_C_93.Character Movement=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: Avoidance=True
+REINST_AIpawn_characterDefault_C_93.RootMotion=True
+REINST_AIpawn_characterDefault_C_93.Character Movement: NavMesh Movement=True
+REINST_AIpawn_characterDefault_C_93.NavMovement=True
+REINST_AIpawn_characterDefault_C_93.Velocity=True
+REINST_AIpawn_characterDefault_C_93.PlanarMovement=True
+REINST_AIpawn_characterDefault_C_93.MovementComponent=True
+REINST_AIpawn_characterDefault_C_93.Shape=True
+REINST_AIpawn_characterDefault_C_93.Navigation=True
+REINST_AIpawn_characterDefault_C_93.Character=True
+REINST_AIpawn_characterDefault_C_93.Camera=True
+REINST_AIpawn_characterDefault_C_93.Pawn=True
+REINST_AIpawn_characterDefault_C_93.Replication=True
+REINST_AIpawn_characterDefault_C_93.Input=True
+REINST_AIpawn_characterDefault_C_93.Actor=True
+CameraComponent.TransformCommon=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+AIpawn_characterDefault_C.AttenuationDistance=True
+AIpawn_characterDefault_C.AttenuationSpatialization=True
+AIpawn_characterDefault_C.AttenuationAirAbsorption=True
+AIpawn_characterDefault_C.AttenuationListenerFocus=True
+AIpawn_characterDefault_C.AttenuationOcclusion=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3680,20 +3759,20 @@ RecentlyPlaced=/Game/Models/Lowpoly/Material.Material;
 DisplayedStatsPageName=PrimitiveStats
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/Lowpoly/LowPolyBush
-MRUItem1=/Game/Models/Lowpoly/LowPolyWorker_Skeleton
-MRUItem2=/Game/Models/Lowpoly/LowPolyWorker
-MRUItem3=/Game/Controllers/AI/CPP/AIpawn_characterDefault
-MRUItem4=/Game/BP/food_classes/BP_foodClass
-MRUItem5=/Game/BP/area-classes/positive/BP_colliderFood
-MRUItem6=/Game/BP/area-classes/negative/BP_collider-forestGeneric
-MRUItem7=/Game/BP/area-classes/BP_negativeLocations
-MRUItem8=/Game/Controllers/AI/CPP/AIpawn_characterGeneric
-MRUItem9=/Game/Controllers/AI/AIpawn-setRandomLoc
-MRUItem10=/Game/Controllers/AI/reactForest
-MRUItem11=/Game/Controllers/AI/AIpawn-blackboard
-MRUItem12=/Game/Controllers/AI/AImainController
-MRUItem13=/Game/Controllers/AI/CPP/AIpawn_controllerGeneric
+MRUItem0=/Game/Controllers/AI/CPP/AIpawn_characterDefault
+MRUItem1=/Game/BP/area-classes/negative/BP_collider-forestGeneric
+MRUItem2=/Game/Controllers/AI/AImainController
+MRUItem3=/Game/Controllers/AI/CPP/AIpawn_controllerGeneric
+MRUItem4=/Game/Models/Lowpoly/LowPolyBush
+MRUItem5=/Game/Models/Lowpoly/LowPolyWorker_Skeleton
+MRUItem6=/Game/Models/Lowpoly/LowPolyWorker
+MRUItem7=/Game/BP/food_classes/BP_foodClass
+MRUItem8=/Game/BP/area-classes/positive/BP_colliderFood
+MRUItem9=/Game/BP/area-classes/BP_negativeLocations
+MRUItem10=/Game/Controllers/AI/CPP/AIpawn_characterGeneric
+MRUItem11=/Game/Controllers/AI/AIpawn-setRandomLoc
+MRUItem12=/Game/Controllers/AI/reactForest
+MRUItem13=/Game/Controllers/AI/AIpawn-blackboard
 MRUItem14=/Game/Controllers/AI/AIpawn-character
 MRUItem15=/Game/Controllers/AI/CPP/MyAIpawn_controller
 MRUItem16=/Game/Controllers/AI/CPP/AIpawn_character
@@ -3823,8 +3902,8 @@ AImainController_C=
 AIController=
 Controller=
 AIpawn-character_C=
-Character=
-Pawn=
+Character="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -3879,9 +3958,17 @@ REINST_AIpawn_character_C_182="\"Object.Components.Mesh\" \"Object.Components.Me
 REINST_AIpawn_characterGeneric_C_105="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
 AIpawn_characterGeneric_C="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Transform\" \"Object.Components.Mesh.Object.Cooking\" "
 REINST_AIpawn_characterGeneric_C_135="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
-AIpawn_characterDefault_C=
-AIpawn_characterDefault=
+AIpawn_characterDefault_C="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+AIpawn_characterDefault="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+BP_collider-forestGeneric_C="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+BP_negativeLocations_C="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+TriggerBox="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+TriggerBase="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+REINST_BP_collider-forestGeneric_C_47=
+REINST_AIpawn_characterDefault_C_93="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+HOTRELOADED_AIpawn_characterDefault_0="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
