--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Village1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=SaveExtension
@@ -822,8 +822,8 @@ MovieSceneCapture.TimeStamp=2019.05.09-22.28.48
 MovieSceneCapture.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2019.04.29-12.59.42
 NewLevelDialog.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2019.04.29-12.59.41
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.05.09-22.28.36
+HierarchicalLODUtilities.LastCompileMethod=External
 MeshBuilder.TimeStamp=2019.05.09-22.28.45
 MeshBuilder.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2019.05.09-22.28.09
@@ -3902,8 +3902,8 @@ AImainController_C=
 AIController=
 Controller=
 AIpawn-character_C=
-Character="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character=
+Pawn=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -3958,8 +3958,8 @@ REINST_AIpawn_character_C_182="\"Object.Components.Mesh\" \"Object.Components.Me
 REINST_AIpawn_characterGeneric_C_105="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
 AIpawn_characterGeneric_C="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Transform\" \"Object.Components.Mesh.Object.Cooking\" "
 REINST_AIpawn_characterGeneric_C_135="\"Object.Components.Mesh\" \"Object.Components.Mesh.Object.StaticMesh\" \"Object.Components.Mesh.Object.Cooking\" "
-AIpawn_characterDefault_C="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-AIpawn_characterDefault="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+AIpawn_characterDefault_C=
+AIpawn_characterDefault=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BP_collider-forestGeneric_C="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
