fixed conflict of files, now compiled without any errors

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Village1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=SaveExtension
@@ -830,7 +830,7 @@ BlueprintGraph.TimeStamp=2019.05.09-22.28.09
 BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.04.29-12.59.40
 ExternalImagePicker.LastCompileMethod=Unknown
-NeuroSim.TimeStamp=2019.05.14-14.11.46
+NeuroSim.TimeStamp=2019.05.14-15.46.42
 NeuroSim.LastCompileMethod=Runtime
 BlueprintCompilerCppBackend.TimeStamp=2019.04.29-12.59.38
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
