--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ GridEnabled=False
 SnapScaleEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -122,7 +122,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Controllers/AI/CPP
+ContentBrowserTab1.SelectedPaths=/Game/BP/area-classes/negative
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -830,7 +830,7 @@ BlueprintGraph.TimeStamp=2019.05.09-22.28.09
 BlueprintGraph.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.04.29-12.59.40
 ExternalImagePicker.LastCompileMethod=Unknown
-NeuroSim.TimeStamp=2019.05.14-15.46.42
+NeuroSim.TimeStamp=2019.05.14-22.09.46
 NeuroSim.LastCompileMethod=Runtime
 BlueprintCompilerCppBackend.TimeStamp=2019.04.29-12.59.38
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
@@ -3811,6 +3811,29 @@ REINST_AIpawn_characterDefault_C_67.Pawn=True
 REINST_AIpawn_characterDefault_C_67.Replication=True
 REINST_AIpawn_characterDefault_C_67.Input=True
 REINST_AIpawn_characterDefault_C_67.Actor=True
+REINST_BP_collider-forestGeneric_C_39.TransformCommon=True
+REINST_BP_collider-forestGeneric_C_39.Shape=True
+REINST_BP_collider-forestGeneric_C_39.Navigation=True
+REINST_BP_collider-forestGeneric_C_39.Physics=True
+REINST_BP_collider-forestGeneric_C_39.Collision=True
+REINST_BP_collider-forestGeneric_C_39.Rendering=True
+REINST_BP_collider-forestGeneric_C_39.Tags=True
+REINST_BP_collider-forestGeneric_C_39.Cooking=True
+REINST_BP_collider-forestGeneric_C_39.Replication=True
+REINST_BP_collider-forestGeneric_C_39.Input=True
+REINST_BP_collider-forestGeneric_C_39.Actor=True
+REINST_BP_collider-forestGeneric_C_43.TransformCommon=True
+REINST_BP_collider-forestGeneric_C_43.Shape=True
+REINST_BP_collider-forestGeneric_C_43.Navigation=True
+REINST_BP_collider-forestGeneric_C_43.Physics=True
+REINST_BP_collider-forestGeneric_C_43.Collision=True
+REINST_BP_collider-forestGeneric_C_43.Rendering=True
+REINST_BP_collider-forestGeneric_C_43.Tags=True
+REINST_BP_collider-forestGeneric_C_43.Cooking=True
+REINST_BP_collider-forestGeneric_C_43.Replication=True
+REINST_BP_collider-forestGeneric_C_43.Input=True
+REINST_BP_collider-forestGeneric_C_43.Actor=True
+K2Node_GetClassDefaults.PinOptions=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3894,13 +3917,13 @@ bConvertSceneUnit=False
 LastLogListing=CompilerResultsLog
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP/area-classes/negative/BP_collider-forestGeneric.BP_collider-forestGeneric;
 RecentlyPlaced=/Script/NeuroSim.AIpawn_characterDefault;
 RecentlyPlaced=/Game/Controllers/AI/CPP/AIpawn_characterDefault.AIpawn_characterDefault;
 RecentlyPlaced=/Game/Models/Lowpoly/steel.steel;
 RecentlyPlaced=/Game/Models/Lowpoly/steel_Inst.steel_Inst;
 RecentlyPlaced=/Game/Controllers/AI/CPP/AIpawn_characterGeneric.AIpawn_characterGeneric;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Game/BP/area-classes/negative/BP_collider-forestGeneric.BP_collider-forestGeneric;
 RecentlyPlaced=/Game/BP/area-classes/positive/BP_colliderFood.BP_colliderFood;
 RecentlyPlaced=/Game/BP/food_classes/BP_foodClass.BP_foodClass;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -3919,15 +3942,15 @@ RecentlyPlaced=/Game/Models/Lowpoly/Material.Material;
 DisplayedStatsPageName=PrimitiveStats
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Controllers/AI/CPP/AIpawn_characterDefault
+MRUItem0=/Game/BP/area-classes/positive/BP_colliderFood
 MRUItem1=/Game/BP/area-classes/negative/BP_collider-forestGeneric
-MRUItem2=/Game/Controllers/AI/AImainController
-MRUItem3=/Game/Controllers/AI/CPP/AIpawn_controllerGeneric
-MRUItem4=/Game/Models/Lowpoly/LowPolyBush
-MRUItem5=/Game/Models/Lowpoly/LowPolyWorker_Skeleton
-MRUItem6=/Game/Models/Lowpoly/LowPolyWorker
-MRUItem7=/Game/BP/food_classes/BP_foodClass
-MRUItem8=/Game/BP/area-classes/positive/BP_colliderFood
+MRUItem2=/Game/Controllers/AI/CPP/AIpawn_characterDefault
+MRUItem3=/Game/Controllers/AI/AImainController
+MRUItem4=/Game/Controllers/AI/CPP/AIpawn_controllerGeneric
+MRUItem5=/Game/Models/Lowpoly/LowPolyBush
+MRUItem6=/Game/Models/Lowpoly/LowPolyWorker_Skeleton
+MRUItem7=/Game/Models/Lowpoly/LowPolyWorker
+MRUItem8=/Game/BP/food_classes/BP_foodClass
 MRUItem9=/Game/BP/area-classes/BP_negativeLocations
 MRUItem10=/Game/Controllers/AI/CPP/AIpawn_characterGeneric
 MRUItem11=/Game/Controllers/AI/AIpawn-setRandomLoc
@@ -4048,7 +4071,7 @@ Object=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -4131,6 +4154,11 @@ REINST_AIpawn_characterDefault_C_93="\"Object.Components.body\" \"Object.Compone
 HOTRELOADED_AIpawn_characterDefault_0="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 REINST_AIpawn_characterDefault_C_55="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 REINST_AIpawn_characterDefault_C_67="\"Object.Components.body\" \"Object.Components.body.Object.Collision\" \"Object.Components.body.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+REINST_BP_collider-forestGeneric_C_39="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+REINST_BP_collider-forestGeneric_C_43="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+BP_colliderFood_C="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+BP_positiveLocations_C="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
+REINST_BP_colliderFood_C_71="\"Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
