included the "primitiveEmotions.h" header file

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -122,7 +122,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/BP/area-classes/negative
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -132,7 +132,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Village1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=SaveExtension
